read me scetions completed

--- a/gamesreviewc/templates/games.html
+++ b/gamesreviewc/templates/games.html
@@ -6,7 +6,7 @@
     <div class="col s12 m6 l5">
         <div class="card white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}"> 
+            <img src="{{url_for('static', filename='image/red2.png')}}" alt="rdr2" aria-label="rdr2"> 
             <span class="card-title"></span> 
           </div>
           <div class="card-content green-text text-darken-4">
@@ -17,7 +17,7 @@
       <div class="col s12 m6 l5">
         <div class="card green white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/codw.png')}}" alt="">
+            <img src="{{url_for('static', filename='image/codw.png')}}" alt="warzone" aria-label="cod">
             <span class="card-title"></span>
           </div>
           <div class="card-content green-text text-darken-4">
@@ -28,7 +28,7 @@
       <div class="col s12 m6 l5">
         <div class="card white">
           <div class="card-image small">
-            <img src="{{url_for('static', filename='image/sky.png')}}">
+            <img src="{{url_for('static', filename='image/sky.png')}}" alt="skyrim" aria-label="skyrim">
             <span class="card-title"></span>
           </div>
           <div class="card-content green-text text-darken-4">
@@ -39,7 +39,7 @@
       <div class="col s12 m6 l5">
         <div class="card  white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/gta.png')}}">
+            <img src="{{url_for('static', filename='image/gta.png')}}" alt="gta5" aria-label="gta5">
             <span class="card-title"></span>
           </div>
           <div class="card-content green-text text-darken-4">
@@ -50,7 +50,7 @@
       <div class="col s12 m6 l5">
         <div class="card white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/sp.png')}}">
+            <img src="{{url_for('static', filename='image/sp.png')}}"alt="spdierman" aria-label="spdierman ps4">
             <span class="card-title"></span>
           </div>
           <div class="card-content green-text text-darken-4">
@@ -61,7 +61,7 @@
       <div class="col s12 m6 l5">
         <div class="card white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/kartos.png')}}">
+            <img src="{{url_for('static', filename='image/kartos.png')}}"alt="gow" aria-label="gow">            
             <span class="card-title"></span>
           </div>
           <div class="card-content green-text text-darken-4">
@@ -72,7 +72,7 @@
       <div class="col s12 m6 l5">
         <div class="card white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/obliv.png')}}">
+            <img src="{{url_for('static', filename='image/obliv.png')}}"alt="oblivion" aria-label="oblivion">
             <span class="card-title"></span>
           </div>
           <div class="card-content green-text text-darken-4">
@@ -83,7 +83,7 @@
       <div class="col s12 m6 l5">
         <div class="card white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/mgp.png')}}">
+            <img src="{{url_for('static', filename='image/mgp.png')}}"alt="mgs" aria-label="metal gear soild">
             <span class="card-title"></span>
           </div>
           <div class="card-content green-text text-darken-4">
@@ -94,7 +94,7 @@
       <div class="col s12 m6 l5">
         <div class="card white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/witcher3.png')}}">
+            <img src="{{url_for('static', filename='image/witcher3.png')}}"alt="witcher" aria-label="witcher3">
             <span class="card-title"></span>
           </div>
           <div class="card-content green-text text-darken-4">
@@ -105,7 +105,7 @@
       <div class="col s12 m6 l5">
         <div class="card white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/zelda.png')}}">
+            <img src="{{url_for('static', filename='image/zelda.png')}}"alt="zelda" aria-label="breath of the wild">
             <span class="card-title"></span>
           </div>
           <div class="card-content green-text text-darken-4">
@@ -116,7 +116,7 @@
       <div class="col s12 m6 l5">
         <div class="card white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/fallout4.png')}}">
+            <img src="{{url_for('static', filename='image/fallout4.png')}}"alt="fallout" aria-label="fallout4">
             <span class="card-title"></span>
           </div>
           <div class="card-content green-text text-darken-4">
@@ -127,7 +127,7 @@
       <div class="col s12 m6 l5">
         <div class="card white">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/warriors.png')}}">
+            <img src="{{url_for('static', filename='image/warriors.png')}}"alt="warriors" aria-label="warriors ps2">
             <span class="card-title"></span>
           </div>
           <div class="card-content green-text text-darken-4">
