--- a/gamesreviewc/templates/index.html
+++ b/gamesreviewc/templates/index.html
@@ -20,8 +20,8 @@
     <p class="author"> Kratos</p>
   </div>
 
-  <a class="prev" onclick="plusSlides(-1)">❮</a>
-  <a class="next" onclick="plusSlides(1)">❯</a>
+  <a class="prev" onclick="plusSlides(-1)"></a>
+  <a class="next" onclick="plusSlides(1)"></a>
 
 </div>
 
@@ -33,16 +33,16 @@
 </div>
   <div class="img-slider">
     <div class="slide active">
-      <img src="{{url_for('static', filename='image/rdr2.png')}}" alt="">
+      <img src="{{url_for('static', filename='image/rdr2.png')}}" alt="1" aria-label="red dead 2">
     </div>
     <div class="slide">
-      <img src="{{url_for('static', filename='image/codw.png')}}" alt="2">
+      <img src="{{url_for('static', filename='image/codw.png')}}" alt="2" aria-label="warzone">>
     </div>
     <div class="slide">
-      <img src="{{url_for('static', filename='image/skyrim.png')}}" alt="3">
+      <img src="{{url_for('static', filename='image/skyrim.png')}}" alt="3" aria-label="skyrim">>
     </div>
     <div class="slide">
-      <img src="{{url_for('static', filename='image/kartos.png')}}" alt="4">
+      <img src="{{url_for('static', filename='image/kartos.png')}}" alt="4" aria-label="GOW">
       </div>
   
 
