read me testing on w3 validator

--- a/gamesreviewc/templates/games.html
+++ b/gamesreviewc/templates/games.html
@@ -4,135 +4,146 @@
 <div class="row">
   <div class="height">
     <div class="col s12 m6 l5">
-        <div class="card white">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}" alt="rdr2" aria-label="rdr2"> 
-            <span class="card-title"></span> 
-          </div>
-          <div class="card-content green-text text-darken-4">
-            <p class="flow-text">Red dead redemption 2 follows the exploits of outlaw Arthur Morgan, in a fictionalized representation of the american West.</p>
-          </div>
+      <div class="card white">
+        <div class="card-image">
+          <img src="{{url_for('static', filename='image/red2.png')}}" alt="rdr2" aria-label="rdr2">
+          <span class="card-title"></span>
+        </div>
+        <div class="card-content green-text text-darken-4">
+          <p class="flow-text">Red dead redemption 2 follows the exploits of outlaw Arthur Morgan, in a fictionalized
+            representation of the american West.</p>
         </div>
       </div>
-      <div class="col s12 m6 l5">
-        <div class="card green white">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/codw.png')}}" alt="warzone" aria-label="cod">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content green-text text-darken-4">
-            <p class="flow-text">Call of Duty: Warzone is a free-to-play battle royale video game released on March 10, 2020, for PlayStation 4, Xbox One, and Microsoft Windows.</p>
-          </div>
+    </div>
+    <div class="col s12 m6 l5">
+      <div class="card green white">
+        <div class="card-image">
+          <img src="{{url_for('static', filename='image/codw.png')}}" alt="warzone" aria-label="cod">
+          <span class="card-title"></span>
+        </div>
+        <div class="card-content green-text text-darken-4">
+          <p class="flow-text">Call of Duty: Warzone is a free-to-play battle royale video game released on March 10,
+            2020, for PlayStation 4, Xbox One, and Microsoft Windows.</p>
         </div>
       </div>
-      <div class="col s12 m6 l5">
-        <div class="card white">
-          <div class="card-image small">
-            <img src="{{url_for('static', filename='image/sky.png')}}" alt="skyrim" aria-label="skyrim">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content green-text text-darken-4">
-            <p class="flow-text">Skyrim is an open-world fantasy adventure, with a world open for you to explore any way you choose the adventures are endless. </p>
-          </div>
+    </div>
+    <div class="col s12 m6 l5">
+      <div class="card white">
+        <div class="card-image small">
+          <img src="{{url_for('static', filename='image/sky.png')}}" alt="skyrim" aria-label="skyrim">
+          <span class="card-title"></span>
+        </div>
+        <div class="card-content green-text text-darken-4">
+          <p class="flow-text">Skyrim is an open-world fantasy adventure, with a world open for you to explore any way
+            you choose the adventures are endless. </p>
         </div>
       </div>
-      <div class="col s12 m6 l5">
-        <div class="card  white">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/gta.png')}}" alt="gta5" aria-label="gta5">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content green-text text-darken-4">
-            <p class="flow text">Grand Theft Auto V is an action-adventure game played from either a third-person or first-person perspectivey.</p>
-          </div>
+    </div>
+    <div class="col s12 m6 l5">
+      <div class="card  white">
+        <div class="card-image">
+          <img src="{{url_for('static', filename='image/gta.png')}}" alt="gta5" aria-label="gta5">
+          <span class="card-title"></span>
+        </div>
+        <div class="card-content green-text text-darken-4">
+          <p class="flow text">Grand Theft Auto V is an action-adventure game played from either a third-person or
+            first-person perspectivey.</p>
         </div>
       </div>
-      <div class="col s12 m6 l5">
-        <div class="card white">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/sp.png')}}" alt="spdierman" aria-label="spdierman ps4">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content green-text text-darken-4">
-            <p class="flow text"> After eight years behind the mask, Peter Parker is a crime-fighting master. Feel the full power of a more experienced Spider-Man.</p>
-          </div>
+    </div>
+    <div class="col s12 m6 l5">
+      <div class="card white">
+        <div class="card-image">
+          <img src="{{url_for('static', filename='image/sp.png')}}" alt="spdierman" aria-label="spdierman ps4">
+          <span class="card-title"></span>
+        </div>
+        <div class="card-content green-text text-darken-4">
+          <p class="flow text"> After eight years behind the mask, Peter Parker is a crime-fighting master. Feel the
+            full power of a more experienced Spider-Man.</p>
         </div>
       </div>
-      <div class="col s12 m6 l5">
-        <div class="card white">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/kartos.png')}}" alt="gow" aria-label="gow">            
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content green-text text-darken-4">
-            <p class="flow-text">God of War is the eighth installment in the franchise overall.This game focuses on Norse mythology, follwing kartos and his son.</p>
-          </div>
+    </div>
+    <div class="col s12 m6 l5">
+      <div class="card white">
+        <div class="card-image">
+          <img src="{{url_for('static', filename='image/kartos.png')}}" alt="gow" aria-label="gow">
+          <span class="card-title"></span>
+        </div>
+        <div class="card-content green-text text-darken-4">
+          <p class="flow-text">God of War is the eighth installment in the franchise overall.This game focuses on Norse
+            mythology, follwing kartos and his son.</p>
         </div>
       </div>
-      <div class="col s12 m6 l5">
-        <div class="card white">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/obliv.png')}}" alt="oblivion" aria-label="oblivion">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content green-text text-darken-4">
-            <p class="flow-text">Oblivion is the 4th game in TES series and is set in the province of Cyrodiil, the heart of the Septim Empire, during the Oblivion Crisis.</p>
-          </div>
+    </div>
+    <div class="col s12 m6 l5">
+      <div class="card white">
+        <div class="card-image">
+          <img src="{{url_for('static', filename='image/obliv.png')}}" alt="oblivion" aria-label="oblivion">
+          <span class="card-title"></span>
+        </div>
+        <div class="card-content green-text text-darken-4">
+          <p class="flow-text">Oblivion is the 4th game in TES series and is set in the province of Cyrodiil, the heart
+            of the Septim Empire, during the Oblivion Crisis.</p>
         </div>
       </div>
-      <div class="col s12 m6 l5">
-        <div class="card white">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/mgp.png')}}" alt="mgs" aria-label="metal gear soild">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content green-text text-darken-4">
-            <p class="flow-text">Metal Gear Solid V: The Phantom Pain is a stealth game in which players take the role of Punished "Venom" Snake. In a thrid person open world game</p>
-          </div>
+    </div>
+    <div class="col s12 m6 l5">
+      <div class="card white">
+        <div class="card-image">
+          <img src="{{url_for('static', filename='image/mgp.png')}}" alt="mgs" aria-label="metal gear soild">
+          <span class="card-title"></span>
+        </div>
+        <div class="card-content green-text text-darken-4">
+          <p class="flow-text">Metal Gear Solid V: The Phantom Pain is a stealth game in which players take the role of
+            Punished "Venom" Snake. In a thrid person open world game</p>
         </div>
       </div>
-      <div class="col s12 m6 l5">
-        <div class="card white">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/witcher3.png')}}" alt="witcher" aria-label="witcher3">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content green-text text-darken-4">
-            <p class="flow-text">Witcher 3: Is an action role-playing game with a third-person perspective. Players control Geralt, a monster slayer known as the white wolf.</p>
-          </div>
+    </div>
+    <div class="col s12 m6 l5">
+      <div class="card white">
+        <div class="card-image">
+          <img src="{{url_for('static', filename='image/witcher3.png')}}" alt="witcher" aria-label="witcher3">
+          <span class="card-title"></span>
+        </div>
+        <div class="card-content green-text text-darken-4">
+          <p class="flow-text">Witcher 3: Is an action role-playing game with a third-person perspective. Players
+            control Geralt, a monster slayer known as the white wolf.</p>
         </div>
       </div>
-      <div class="col s12 m6 l5">
-        <div class="card white">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/zelda.png')}}" alt="zelda" aria-label="breath of the wild">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content green-text text-darken-4">
-            <p class="flow-text">Breath of the Wild is an open world action-adventure game. Players are tasked with exploring the kingdom of Hyrule while controlling Link.</p>
-          </div>
+    </div>
+    <div class="col s12 m6 l5">
+      <div class="card white">
+        <div class="card-image">
+          <img src="{{url_for('static', filename='image/zelda.png')}}" alt="zelda" aria-label="breath of the wild">
+          <span class="card-title"></span>
+        </div>
+        <div class="card-content green-text text-darken-4">
+          <p class="flow-text">Breath of the Wild is an open world action-adventure game. Players are tasked with
+            exploring the kingdom of Hyrule while controlling Link.</p>
         </div>
       </div>
-      <div class="col s12 m6 l5">
-        <div class="card white">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/fallout4.png')}}" alt="fallout" aria-label="fallout4">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content green-text text-darken-4">
-            <p class="flow-text">Fallout 4 is a post-apocalyptic role-playing game developed by Bethesda Game Studios and published by Bethesda Softworks.</p>
-          </div>
+    </div>
+    <div class="col s12 m6 l5">
+      <div class="card white">
+        <div class="card-image">
+          <img src="{{url_for('static', filename='image/fallout4.png')}}" alt="fallout" aria-label="fallout4">
+          <span class="card-title"></span>
+        </div>
+        <div class="card-content green-text text-darken-4">
+          <p class="flow-text">Fallout 4 is a post-apocalyptic role-playing game developed by Bethesda Game Studios and
+            published by Bethesda Softworks.</p>
         </div>
       </div>
-      <div class="col s12 m6 l5">
-        <div class="card white">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/warriors.png')}}" alt="warriors" aria-label="warriors ps2">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content green-text text-darken-4">
-            <p class="flow-text">The game takes place in a gritty 1979 New York City. The story follows a street gang, the Warriors, and how they had been accused of a murder they didn't commi.</p>
-          </div>
+    </div>
+    <div class="col s12 m6 l5">
+      <div class="card white">
+        <div class="card-image">
+          <img src="{{url_for('static', filename='image/warriors.png')}}" alt="warriors" aria-label="warriors ps2">
+          <span class="card-title"></span>
+        </div>
+        <div class="card-content green-text text-darken-4">
+          <p class="flow-text">The game takes place in a gritty 1979 New York City. The story follows a street gang, the
+            Warriors, and how they had been accused of a murder they didn't commi.</p>
         </div>
       </div>
     </div>
@@ -141,5 +152,5 @@
 
 
 
-  
+
 {% endblock %}
