--- a/gamesreviewc/templates/login.html
+++ b/gamesreviewc/templates/login.html
@@ -1,41 +1,41 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align"></h3>
+<h3 class="hide">Login</h3>
 
-    <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
-            <div class="card-panel green darken-2">
-                <!-- username -->
-                <div class="row">
-					<div class="input-field col s12">
-						<i class="fas fa-user-cog prefix white-text text-darken-4"></i>
-						<input id="username" name="username" type="text" minlength="1"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-						<label for="username">Username</label>
-					</div>
-                </div>
-                <!-- passowrd -->
-                <div class="row">
-                    <div class="input-field col s12">
-						<i class="fas fa-user-lock prefix white-text text-darken-4"></i>
-                        <input id="password" name="password" type="password" minlength="5"
-                            maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="password">Password</label>
-                    </div>
-                </div>
-                <!-- login -->
-                <div class="row">
-                    <button type="submit" class="col s12 btn-large white green-text text-darken-2">
-                        Log In<i class="fas fa-sign-in-alt"></i>
-                    </button>
-                    <div id="us">
-                    <a href="{{ url_for('register') }}" class="white-text center-align">Register Here</a>
-                  </div>
+<div class="row">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
+        <div class="card-panel green darken-2">
+            <!-- username -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-user-cog prefix white-text text-darken-4"></i>
+                    <input id="username" name="username" type="text" minlength="1" maxlength="15"
+                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                    <label for="username">Username</label>
                 </div>
             </div>
-        </form>
-    </div>
+            <!-- passowrd -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-user-lock prefix white-text text-darken-4"></i>
+                    <input id="password" name="password" type="password" minlength="5" maxlength="15"
+                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                    <label for="password">Password</label>
+                </div>
+            </div>
+            <!-- login -->
+            <div class="row">
+                <button type="submit" class="col s12 btn-large white green-text text-darken-2">
+                    Log In<i class="fas fa-sign-in-alt"></i>
+                </button>
+                <div id="us">
+                    <a href="{{ url_for('register') }}" class="white-text center-align">Register Here</a>
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
-    
-    {% endblock %}
+
+
+{% endblock %}
