--- a/gamesreviewc/templates/publisher.html
+++ b/gamesreviewc/templates/publisher.html
@@ -1,56 +1,54 @@
 {% extends "base.html" %}
 {% block content %}
- 
+
 <h3 class="hide"> Reviews </h3>
 <div class="row">
-    <div class="s1 m2">
-      <div class="card transparent">
-        <div class="card-content white-text text-darken-4 center-align">
-          <span class="card-title">Publishers</span>
+  <div class="s1 m2">
+    <div class="card transparent">
+      <div class="card-content white-text text-darken-4 center-align">
+        <span class="card-title">Publishers</span>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col s12 center-align">
+    <a href="{{ url_for('add_publisher') }}" class="btn-large green darken-2">
+      Add Publishers <i class="fas fa-plus-square right"></i>
+    </a>
+  </div>
+</div>
+<div class="row">
+  <div>
+    {% for p in publisher  %}
+    <div class="col s12 m5 l3 transparent">
+      <div class="card green darken-2 center-align">
+        <div class="card-image s12 m6 13 center-align">
+          <img src="{{url_for('static', filename='image/games.png')}}" alt="game" aria-label="game picture">
+          <span class="card-title s12 m5 13">{{ p.publisher_name }}</span>
+        </div>
+        <div class="card-content white-text">
+          <p>Publishers Name</p>
+        </div>
+        <div class="card-action">
+          <a href="{{ url_for('edit_publisher', publisher_id=p.id) }}" class="btn black">Edit</a>
+          <a href="#modal-{{ p.id }}" class="btn red modal-trigger">Delete</a>
+          <!-- Modal warning messages  -->
+          <div id="modal-{{ p.id }}" class="modal">
+            <div class="modal-content green darken-2 white-text">
+              <h4>Are you sure you want to delete this Publisher?</h4>
+              <p>This action cannot be undone</p>
+            </div>
+            <div class="modal-footer green darken-2">
+              <a href="{{ url_for('delete_publisher', publisher_id=p.id) }}" class="btn-large red col m3 ">Delete</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col s12 center-align">
-        <a href="{{ url_for('add_publisher') }}" class="btn-large green darken-2">
-            Add Publishers <i class="fas fa-plus-square right"></i>
-        </a>
-    </div>
 </div>
-<div class="row">
-  <div>
-  {% for p in publisher  %}
-  <div class="col s12 m5 l3 transparent">
-    <div class="card green darken-2 center-align">
-      <div class="card-image s12 m6 13 center-align">
-        <img src="{{url_for('static', filename='image/games.png')}}">
-        <span class="card-title s12 m5 13">{{ p.publisher_name }}</span>
-      </div>
-      <div class="card-content white-text">
-        <p>Publishers Name</p>
-      </div>
-      <div class="card-action">
-        <a href="{{ url_for('edit_publisher', publisher_id=p.id) }}" class="btn black">Edit</a>
-        <a href="#modal-{{ p.id }}" class="btn red modal-trigger">Delete</a>
-        <!-- Modal warning messages  -->
-        <div id="modal-{{ p.id }}" class="modal">
-          <div class="modal-content green darken-2 white-text">
-            <h4>Are you sure you want to delete this Publisher?</h4>
-            <p>This action cannot be undone</p>          
-          </div>
-          <div class="modal-footer green darken-2">
-            <a href="{{ url_for('delete_publisher', publisher_id=p.id) }}" class="btn-large red col m3 ">Delete</a>
-          </div>
-        </div>
-       </div>
-     </div>
-   </div>
- 
+
+
 {% endfor %}
-
-
-      
-       
-        
 {% endblock %}
