read me testing on w3 validator

--- a/gamesreviewc/templates/add_game.html
+++ b/gamesreviewc/templates/add_game.html
@@ -23,8 +23,8 @@
         <div class="row">
             <div class="input-field col s12 green darken-2">
                 <i class="fas fa-folder-open prefix white-text"></i>
-                <textarea  id="game_name" name="game_name" minlength="4" maxlength="50" 
-                type="text" class="materialize-textare validate" required></textarea>
+                <input  id="game_name" name="game_name" minlength="4" maxlength="50" 
+                type="text" class="materialize-textare validate" required>
                 <label for="game_name"></label>
             </div>
         </div>
