--- a/gamesreviewc/templates/edit_game.html
+++ b/gamesreviewc/templates/edit_game.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
 <h3 class="hide"> Reviews </h3>
- 
+
 <div class="row">
     <div class="s1 m2">
-      <div class="card transparent">
-        <div class="card-content white-text center-align">
-          <span class="card-title">Edit Game</span>
+        <div class="card transparent">
+            <div class="card-content white-text center-align">
+                <span class="card-title">Edit Game</span>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <div class="row">
+</div>
+<div class="row">
     <div class="col s12 center-align">
         <a href="{{ url_for('add_game') }}" class="btn-large green darken-2">
             Edit Titles <i class="fas fa-plus-square right"></i>
@@ -24,7 +24,8 @@
         <div class="row">
             <div class="input-field col s12 green darken-2">
                 <i class="fas fa-folder-open prefix white-text"></i>
-                <input  id="game_name" name="game_name" minlength="3" maxlength="40" type="text" class="validate" required>
+                <input id="game_name" name="game_name" minlength="3" maxlength="40" type="text" class="validate"
+                    required>
                 <label for="game_name">Game Name</label>
             </div>
         </div>
