--- a/gamesreviewc/static/css/style.css
+++ b/gamesreviewc/static/css/style.css
@@ -242,7 +242,7 @@ body {
   line-height: 110%;
   margin: 1.52rem 0 .912rem 0;
   text-align: center;
-  transform: scaleX(1), scaleY(1) ;
+  transform: scaleX(1) scaleY(1);
 }
 
 p{
