--- a/gamesreviewc/templates/base.html
+++ b/gamesreviewc/templates/base.html
@@ -46,7 +46,7 @@
 
         </ul>
 
-        <ul class="sidenav green draken-2" id="mobile-demo" class="sidenav-bars">
+        <ul class="sidenav green draken-2" id="mobile-demo">
           <li><a href="{{ url_for('index') }}">Home</a></li>
           {% if session.user %}
           <li><a href="{{ url_for('games') }}">Games</a></li>
@@ -77,7 +77,7 @@
   {% endfor %}
   {% endif %}
   {% endwith %}
-  
+
   <main class="container">
     {% block content %}
     {% endblock %}
