--- a/gamesreviewc/templates/publisher.html
+++ b/gamesreviewc/templates/publisher.html
@@ -21,7 +21,7 @@
 <div class="row">
   <div>
     {% for p in publisher  %}
-    <div class="col s12 m5 l3 transparent">
+    <di class="col s12 m5 l3 transparent">
       <div class="card green darken-2 center-align">
         <div class="card-image s12 m6 13 center-align">
           <img src="{{url_for('static', filename='image/games.png')}}" alt="game" aria-label="game picture">
@@ -45,8 +45,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
 </div>
 
 
