--- a/gamesreviewc/templates/register.html
+++ b/gamesreviewc/templates/register.html
@@ -1,35 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
 <h3 class="center-align"></h3>
-
-    <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
-            <div class="card-panel green darken-2">
-                <!-- username -->
-                <div class="row">
-					<div class="input-field col s12">
-						<i class="fas fa-user-plus prefix dark white-text"></i>
-						<input id="username" name="username" type="text" minlength="3" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-						<label for="username">Username</label>
-					</div>
-                </div>
-                <!-- passowrd -->
-                <div class="row">
-                    <div class="input-field col s12">
-						<i class="fas fa-user-lock prefix white-text"></i>
-                        <input id="password" name="password" type="password" minlength="5" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="password">Password</label>
-                    </div>
-                </div>
-                <!-- register -->
-                <div class="row">
-                    <button type="submit" class="col s12 btn-large white green-text text-darken-2">
-                        Register Account <i class="fas fa-sign-in-alt"></i>
-                    </button>
+<div class="row">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+        <div class="card-panel green darken-2">
+            <!-- username -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-user-plus prefix dark white-text"></i>
+                    <input id="username" name="username" type="text" minlength="3" maxlength="15"
+                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                    <label for="username">Username</label>
                 </div>
             </div>
-        </form>
-    </div>
-
-
-    {% endblock %}
+            <!-- password -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-user-lock prefix white-text"></i>
+                    <input id="password" name="password" type="password" minlength="5" pattern="^[a-zA-Z0-9]{5,15}$"
+                        class="validate" required>
+                    <label for="password">Password</label>
+                </div>
+            </div>
+            <!-- register -->
+            <div class="row">
+                <button type="submit" class="col s12 btn-large white green-text text-darken-2">
+                    Register Account <i class="fas fa-sign-in-alt"></i>
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
+{% endblock %}
