grammer check completed and werseug and data schema added to read me file

--- a/gamesreviewc/templates/games.html
+++ b/gamesreviewc/templates/games.html
@@ -54,7 +54,7 @@
     <div class="col s12 m6 l5">
       <div class="card white">
         <div class="card-image">
-          <img src="{{url_for('static', filename='image/sp.png')}}" alt="spdierman" aria-label="spdierman ps4">
+          <img src="{{url_for('static', filename='image/spiderman.png')}}" alt="spiderman" aria-label="spiderman ps4">
           <span class="card-title"></span>
         </div>
         <div class="card-content green-text text-darken-4">
@@ -149,8 +149,5 @@
     </div>
   </div>
 </div>
-
-
-
 
 {% endblock %}
