chnages  to file structure and cleaned up the code

--- a/gamesreviewc/static/css/style.css
+++ b/gamesreviewc/static/css/style.css
@@ -1,13 +1,12 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  
-  body{
-      background-image :  url("https://i.postimg.cc/5y4vjWM3/gameover.jpg");
-      
-  }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-image: url("https://i.postimg.cc/5y4vjWM3/gameover.jpg");
+}
 
 /* Slideshow container */
 .slideshow-container {
@@ -23,7 +22,7 @@
   text-align: center;
 }
 .mySlides q {
- color: white;
+  color: white;
 }
 /* Next & previous buttons */
 .prev,
@@ -90,32 +89,31 @@ q {
   color: cornflowerblue;
 }
 
-
-.nav-wrapper a{
-    color: white;
-    font-size: 30px;
-    font-family: 'Cookie', cursive;
+.nav-wrapper a {
+  color: white;
+  font-size: 30px;
+  font-family: "Cookie", cursive;
 }
-.sidenav a{
+.sidenav a {
   color: white;
 }
 /* responsiveness for nav wrapper */
-@media (max-width: 920px){
-  .nav-wrapper a{
-  font-size: 20px;
+@media (max-width: 920px) {
+  .nav-wrapper a {
+    font-size: 20px;
   }
 }
-@media (max-width: 620px){
-  .nav-wrapper a{
-  font-size: 20px;
+@media (max-width: 620px) {
+  .nav-wrapper a {
+    font-size: 20px;
   }
 }
-@media (max-width: 420px){
-  .nav-wrapper a{
-  font-size: 20px;
+@media (max-width: 420px) {
+  .nav-wrapper a {
+    font-size: 20px;
   }
 }
-.welcome{
+.welcome {
   font-size: 30px;
   color: white;
   padding-top: 1%;
@@ -124,25 +122,24 @@ q {
   background-color: green;
   opacity: 0.7;
 }
-@media (max-width: 920px){
-  .welcome{
+@media (max-width: 920px) {
+  .welcome {
     font-size: 25px;
-
   }
 }
-@media (max-width: 620px){
-  .welcome{
+@media (max-width: 620px) {
+  .welcome {
     font-size: 20px;
   }
 }
-@media (max-width: 420px){
-  .welcome{
+@media (max-width: 420px) {
+  .welcome {
     font-size: 15px;
   }
 }
 
 /* image slider */
-.img-slider{
+.img-slider {
   position: relative;
   width: 900px;
   height: 600px;
@@ -152,7 +149,7 @@ q {
   align-items: center;
 }
 
-.img-slider .slide{
+.img-slider .slide {
   z-index: 1;
   position: absolute;
   width: 100%;
@@ -164,7 +161,7 @@ q {
   transition: 5s;
 }
 
-.img-slider .slide img{
+.img-slider .slide img {
   z-index: 1;
   width: 100%;
   margin-left: 14%;
@@ -174,91 +171,93 @@ q {
 }
 
 /* image slider resonpsiveness */
-@media (max-width: 920px){
-  .img-slider .slide img{
+@media (max-width: 920px) {
+  .img-slider .slide img {
     width: 80%;
     margin: auto;
   }
 }
-@media (max-width: 620px){
+@media (max-width: 620px) {
   .img-slider .slide img {
     width: 35%;
- }
+  }
 }
 
 /* card image sizes */
-.height, .card-image{
+.height,
+.card-image {
   height: 30vh;
 }
 /* row text size */
 
-.row p{
+.row p {
   font-size: 15px;
 }
 /* footer style  */
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-  }
-
-  main {
-    flex: 1 0 auto;
-  }
-
-.row{
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 20px;
-  
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
-.page-footer{
+main {
+  flex: 1 0 auto;
+}
+
+.row {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 20px;
+}
+
+.page-footer {
   height: 100%;
   padding: 1%;
   position: sticky;
 }
 
 /* Publisher and Add publisher css */
-#publisher_name{
+#publisher_name {
   color: white;
 }
 
-.card-title{
+.card-title {
   text-align: center;
 }
 
-
-
-.modal .modal-footer .btn, .modal .modal-footer .btn-large, .modal .modal-footer .btn-small, .modal .modal-footer .btn-flat {
+.modal .modal-footer .btn,
+.modal .modal-footer .btn-large,
+.modal .modal-footer .btn-small,
+.modal .modal-footer .btn-flat {
   margin-left: 38%;
 }
 /*game modal button postioning */
-.modal .modal-footer .btn, .modal .modal-footer .btn-large, .modal .modal-footer .btn-small, .modal .modal-footer .btn-flat {
+.modal .modal-footer .btn,
+.modal .modal-footer .btn-large,
+.modal .modal-footer .btn-small,
+.modal .modal-footer .btn-flat {
   margin-right: 35%;
 }
 /* h4 and p elements */
 .modal h4 {
   font-size: 2.28rem;
   line-height: 110%;
-  margin: 1.52rem 0 .912rem 0;
+  margin: 1.52rem 0 0.912rem 0;
   text-align: center;
   transform: scaleX(1) scaleY(1);
 }
 
-p{
- text-align: center;
+p {
+  text-align: center;
 }
-
 
 /* user register link and login register links  */
 
-#us{
+#us {
   text-align: center;
   margin-top: 1%;
-
 }
 
 /* flash messages */
-.flashes h5{
+.flashes h5 {
   line-height: 2;
 }
