end for block missed of code so dtabase wont run

--- a/gamesreviewc/templates/reviews.html
+++ b/gamesreviewc/templates/reviews.html
@@ -20,8 +20,8 @@
 {% if game|length > 0 %}
 <ul class="collapsible">
   {% for game in game %}
-  {% for review in reviews %}
-  <li>
+   {% for review in reviews %}
+   <li>
     <div class="collapsible-header green white-text">
       <i class="fa-solid fa-gamepad-modern"></i>
       <strong>{{ game.game_name }}</strong>
@@ -45,7 +45,8 @@
         </div>
       </div>
     </div>
-  </li>
+   </li>
+   {% endfor %}
   {% endfor %}
 </ul>
 {% endblock %}
